added footer links

--- a/index.html
+++ b/index.html
@@ -6,7 +6,19 @@
     <title>What's the Weather?</title>
   </head>
   <body>
-    Hello World! 👩‍💻
-    <footer>Built by Jenn Bencriscutto</footer>
+    <h1>Hello World! 👩‍💻</h1>
+    <footer>
+      Built by
+      <a href="https://github.com/jpcreativeworks" target="_blank"
+        >Jenn Bencriscutto</a
+      >, code is hosted on
+      <a
+        href="https://github.com/jpcreativeworks/Whats-the-Weather-App.git"
+        target="_blank"
+        >GitHub</a
+      >
+      and website hosted on
+      <a href="https://wtweatherapp.netlify.app/" target="_blank">Netlify</a>.
+    </footer>
   </body>
 </html>
