adde html elements

--- a/index.html
+++ b/index.html
@@ -6,7 +6,36 @@
     <title>What's the Weather?</title>
   </head>
   <body>
-    <h1>Hello World! 👩‍💻</h1>
+    <header>
+      <p class="weather-icon">🌤️</p>
+      <form>
+        <input type="search" placeholder="Enter a city..." required />
+        <input type="submit" value="Search" />
+      </form>
+    </header>
+    <main>
+      <div>
+        <h1>What's the Weather?</h1>
+        <p>Tuesday 14:14</p>
+      </div>
+      <div>
+        <h2>Tucson, AZ, USA</h2>
+        <p>
+          <strong>Sunny</strong><br />
+          Humidity: <strong>10%</strong>, Wind: <strong>2mph</strong>
+        </p>
+      </div>
+      <div>
+        <h2>48°C</h2>
+      </div>
+      <div class="five-day-forcast">
+        <div>W ☀️ 25°C</div>
+        <div>Th ☀️ 25°C</div>
+        <div>F ☀️ 25°C</div>
+        <div>S ☀️ 25°C</div>
+        <div>Su ☀️ 25°C</div>
+      </div>
+    </main>
     <footer>
       Built by
       <a href="https://github.com/jpcreativeworks" target="_blank"
