--- a/index.html
+++ b/index.html
@@ -28,21 +28,37 @@
             <p class="current">Tuesday 14:14</p>
           </div>
           <div>
+            <h2 class="current-temp">48°C</h2>
+          </div>
+          <div>
             <h2 class="city-info">Tucson, AZ, USA</h2>
             <p class="weather-info">
               <strong>Sunny</strong><br />
               Humidity: <strong>10%</strong>, Wind: <strong>2mph</strong>
             </p>
           </div>
-          <div>
-            <h2 class="current-temp">48°C</h2>
-          </div>
-          <div class="five-day-forcast">
-            <div>W ☀️ 25°C</div>
-            <div>Th ☀️ 25°C</div>
-            <div>F ☀️ 25°C</div>
-            <div>S ☀️ 25°C</div>
-            <div>Su ☀️ 25°C</div>
+
+          <div class="five-day-forecast">
+            <div>
+              <span class="day">W</span><br />
+              <span class="icon"> ☀️ </span><span class="degrees"> 25°C</span>
+            </div>
+            <div>
+              <span class="day">Th</span><br /><span class="icon"> ☀️ </span
+              ><span class="degrees"> 25°C</span>
+            </div>
+            <div>
+              <span class="day">F</span><br /><span class="icon"> ☀️ </span
+              ><span class="degrees"> 25°C</span>
+            </div>
+            <div>
+              <span class="day">S</span><br /><span class="icon"> ☀️ </span
+              ><span class="degrees"> 25°C</span>
+            </div>
+            <div>
+              <span class="day">Su</span><br /><span class="icon"> ☀️ </span
+              ><span class="degrees"> 25°C</span>
+            </div>
           </div>
         </main>
         <footer>
