centered five day forecast, reduced margin for current temp in main

--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
             <p class="current">Tuesday 14:14</p>
           </div>
           <div>
-            <h2 class="current-temp">48°C</h2>
+            <h2 class="current-temp">
+              48 <span class="current-temp-unit">°C</span>
+            </h2>
           </div>
           <div>
             <h2 class="city-info">Tucson, AZ, USA</h2>
@@ -40,23 +42,25 @@
 
           <div class="five-day-forecast">
             <div>
-              <span class="day">W</span><br />
+              <span class="day">Wednesday</span><br />
               <span class="icon"> ☀️ </span><span class="degrees"> 25°C</span>
             </div>
             <div>
-              <span class="day">Th</span><br /><span class="icon"> ☀️ </span
+              <span class="day">Thursday</span><br /><span class="icon">
+                ☀️ </span
               ><span class="degrees"> 25°C</span>
             </div>
             <div>
-              <span class="day">F</span><br /><span class="icon"> ☀️ </span
+              <span class="day">Friday</span><br /><span class="icon"> ☀️ </span
               ><span class="degrees"> 25°C</span>
             </div>
             <div>
-              <span class="day">S</span><br /><span class="icon"> ☀️ </span
+              <span class="day">Saturday</span><br /><span class="icon">
+                ☀️ </span
               ><span class="degrees"> 25°C</span>
             </div>
             <div>
-              <span class="day">Su</span><br /><span class="icon"> ☀️ </span
+              <span class="day">Sunday</span><br /><span class="icon"> ☀️ </span
               ><span class="degrees"> 25°C</span>
             </div>
           </div>
