corrected weather icon error

--- a/index.html
+++ b/index.html
@@ -14,9 +14,15 @@
   </head>
   <body>
     <div class="weather-app" id="weather-icon-container">
-      <p class="weather-icon">🌤️</p>
       <div class="weather-app-info">
         <header>
+          <div class="" id="weather-icon-container">
+            <img
+              src="https://www.weatherbit.io/static/img/icons/c02d.png"
+              alt="Partly Cloudy"
+              id="weather-icon"
+            />
+          </div>
           <form class="city-search" id="search-form">
             <input
               type="search"
