fixed 5day forecast css issue and days of week sync issue

--- a/index.html
+++ b/index.html
@@ -51,28 +51,57 @@
             </p>
           </div>
 
-          <div class="five-day-forecast">
-            <div>
+          <div id="forecast-container">
+            <!--class="five-day-forecast"-->
+            <div class="forecast-day">
               <span class="day">Wednesday</span><br />
-              <span class="icon"> ☀️ </span><span class="degrees"> 25°C</span>
+              <img
+                src="https://www.weatherbit.io/static/img/icons/c01d.png"
+                alt="Weather Icon"
+                class="forecast-icon"
+              />
+              <!-- </span><span class="degrees"> 25°C</span> -->
+              <div class="forecast-temp">--°C</div>
             </div>
-            <div>
-              <span class="day">Thursday</span><br /><span class="icon">
-                ☀️ </span
-              ><span class="degrees"> 25°C</span>
+            <div class="forecast-day">
+              <span class="day">Thursday</span><br />
+              <img
+                src="https://www.weatherbit.io/static/img/icons/c01d.png"
+                alt="Weather Icon"
+                class="forecast-icon"
+              />
+
+              <!-- <span class="degrees"> 25°C</span>-->
+              <div class="forecast-temp">--°C</div>
             </div>
-            <div>
-              <span class="day">Friday</span><br /><span class="icon"> ☀️ </span
-              ><span class="degrees"> 25°C</span>
+            <div class="forecast-day">
+              <span class="day">Friday</span><br />
+              <img
+                src="https://www.weatherbit.io/static/img/icons/c01d.png"
+                alt="Weather Icon"
+                class="forecast-icon"
+              />
+              <!-- <span class="degrees"> 25°C</span>-->
+              <div class="forecast-temp">--°C</div>
             </div>
-            <div>
-              <span class="day">Saturday</span><br /><span class="icon">
-                ☀️ </span
-              ><span class="degrees"> 25°C</span>
+            <div class="forecast-day">
+              <span class="day">Saturday</span><br />
+              <img
+                src="https://www.weatherbit.io/static/img/icons/c01d.png"
+                alt="Weather Icon"
+                class="forecast-icon"
+              />
+              <!-- <span class="degrees"> 25°C</span>-->
+              <div class="forecast-temp">--°C</div>
             </div>
-            <div>
-              <span class="day">Sunday</span><br /><span class="icon"> ☀️ </span
-              ><span class="degrees"> 25°C</span>
+            <div class="forecast-day">
+              <span class="day">Sunday</span><br /><img
+                src="https://www.weatherbit.io/static/img/icons/c01d.png"
+                alt="Weather Icon"
+                class="forecast-icon"
+              />
+              <!-- <span class="degrees"> 25°C</span>-->
+              <div class="forecast-temp">--°C</div>
             </div>
           </div>
         </main>
